multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi
  name: multi
spec:
  containers:
   - name: nginx 
     image: nginx
   - name: ubuntu
     image: ubuntu
     command: ["sleep","5000"]
