pod-defination.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
  labels:
    app: mongodb 
    type: database
  spec:
    containers:
      - name: mongodb-container
        image: mongo
