rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rabbit
  name: rabbit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbit
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rabbit
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
