rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  #creationTimestamp: null
  labels:
    app: rabbit
  name: rabbit-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: rabbit
