ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: deeway.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
      - backend:
          serviceName: mongo-express-service
          servicePort: 8081
